# CSAAT-dev-old

./: README.md  start_dev.sh
backend/: pyproject.toml
backend/backend/: generate.py
backend/backend/api/: admin.py  models.py  serializers.py  urls.py
backend/backend/api/migrations/: 0001_initial.py  0002_auto_20210313_1114.py  0002_auto_20210328_1147.py  0003_audios.py  0003_auto_20210313_1200.py  0004_auto_20210313_1202.py  0004_auto_20210429_1733.py  0005_auto_20210313_1318.py  0006_auto_20210313_2207.py
backend/backend/api/views/: __init__.py  antypical_children_views.py  audio_views.py  camera_angles_views.py  cameras_views.py  profiles_views.py  sessions_views.py  typical_children_views.py  videos_views.py
backend/backend/backend/: settings.py  urls.py
backend/backend/frontend/: asset-manifest.json  index.html  manifest.json
backend/backend/frontend/static/js/: 2.c8ab1daf.chunk.js  runtime-main.7c590040.js
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/public/assets/js/: main.js
frontend/src/: App.js  App.module.css  index.css  index.js
frontend/src/actions/: AudioActions.js  CameraActions.js  CameraAngleActions.js  ChildActions.js  NavigationActions.js  SessionActions.js  Types.js  VideoActions.js
frontend/src/assets/css/: AddModal.module.css  TableComponent.module.css
frontend/src/components/: ErrorBoundry.js
frontend/src/reducers/: AudioReducer.js  CameraAngleReducer.js  CameraReducer.js  ChildReducer.js  NavigationReducer.js  SessionReducer.js  VideoReducer.js  index.js
(+89 files in other folders)
